--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: quizapp
-description: "A new Flutter project."
+description: "Flutter first project"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -35,6 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.3.0
+  cloud_firestore: ^5.2.1
+  firebase_auth: ^5.1.4
+  #google_sign_in: 5.3.3
+  #sign_in_with_apple: 4.0.0
+  #crypto: 3.0.1
+  #font_awesome_flutter: 10.1.0
+  #google_fonts: 3.0.1
+  #provider: 6.0.3
+  #rxdart: 0.27.4
+  #json_annotation: 4.5.0
 
 dev_dependencies:
   flutter_test:
