--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.1.0+2
 
 environment:
   sdk: ^3.5.0
@@ -38,14 +38,14 @@ dependencies:
   firebase_core: ^3.3.0
   cloud_firestore: ^5.2.1
   firebase_auth: ^5.1.4
-  #google_sign_in: 5.3.3
-  #sign_in_with_apple: 4.0.0
-  #crypto: 3.0.1
-  #font_awesome_flutter: 10.1.0
-  #google_fonts: 3.0.1
-  #provider: 6.0.3
-  #rxdart: 0.27.4
-  #json_annotation: 4.5.0
+  google_sign_in: ^6.2.1
+  #sign_in_with_apple: ^6.1.1
+  #crypto: ^3.0.1
+  font_awesome_flutter: ^10.7.0
+  google_fonts: ^6.2.1 
+  #provider: ^6.0.3
+  #rxdart: ^0.27.4
+  #json_annotation: ^4.5.0
 
 dev_dependencies:
   flutter_test:
