--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,3 +56,6 @@ android {
 flutter {
     source = "../.."
 }
+dependencies {
+    implementation "com.google.android.gms:play-services-games-v2:+"
+  }
