--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   #crypto: ^3.0.1
   font_awesome_flutter: ^10.7.0
   google_fonts: ^6.2.1 
-  #provider: ^6.0.3
+  provider: ^6.1.2
   rxdart: ^0.28.0
   json_annotation: ^4.9.0
 
